Added Sep 24th match address, style

--- a/index.html
+++ b/index.html
@@ -1,4 +1,23 @@
 <html>
+  <head>
+  <style>
+  table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
+  </style>
+</head>
   <body>
     <table>
       <th>
@@ -11,6 +30,7 @@
         <td>Sun, Sep 24, 2023</td>
         <td><b>Away</b> vs Samuel Montagu FC</td>
         <td><b>Meet:</b>1:30pm, <b>Kickoff:</b>2:00pm</td>
+        <td>Venue: Samuel Montagu Youth Centre,Broad Walk, Kidbrooke, SE3 8ND</td>
       </tr>
     </table>
   </body>
