Fixed table snafus

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 </head>
   <body>
     <table>
-      <th>
-        <td>Date</td>
-        <td>Event</td>
-        <td>Time</td>
-        <td>Address</td>
-      </th>
+      <tr>
+        <th>Date</th>
+        <th>Event</th>
+        <th>Time</th>
+        <th>Address</th>
+      </tr>
       <tr>
         <td>Sun, Sep 24, 2023</td>
         <td><b>Away</b> vs Samuel Montagu FC</td>
