--- a/gold/index.html
+++ b/gold/index.html
@@ -17,31 +17,32 @@
     </style>
   </head>
   <body>
-    <div class="w3-container w3-green">
+    <div class="w3-container w3-amber">
       <h2>U10 Gold Schedules 2023/24 (Latest at the top)</h2>
     </div>
     <div>
       {% for post in site.posts %}
-        <div class="w3-third">
-          <div>
-            <h5>Date and Time: {{post.matchDate}}</h5>
-            <p><b>Meet:</b> {{post.meetup}}</p>
-            <p><b>Kickoff:</b> {{post.kickoff}}</p>
-          </div>
-        </div>  
-        <div class="w3-third">
-          <div>
-             <h5><b>{{post.matchType}}</b> vs {{post.otherTeam}}<h5>
-          </div>  
-        </div>
-        <div class="w3-third">
-          <h5>Address: {{post.address}}</h5>
-          <div>
-              <iframe src="{{post.map}}" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="w3-container w3-mobile">
+            <hr/>
+            <div class="w3-third">
+              <div>
+                <h5><b>Date and Time:</b> {{post.matchDate}}</h5>
+                <p><b>Meet:</b> {{post.meetup}}</p>
+                <p><b>Kickoff:</b> {{post.kickoff}}</p>
+              </div>
+            </div>  
+            <div class="w3-third">
+              <div>
+                 <h5><b>{{post.matchType}}</b> vs {{post.otherTeam}}<h5>
+              </div>  
             </div>
+            <div class="w3-third">
+              <h5>Address: {{post.address}}</h5>
+              <div>
+                <iframe src="{{post.map}}" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
         </div>
       {% endfor %}
-      </div>
-    <div>
+    </div>
   </body>
 </html>
